sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:25: error: 'while' expected but '}' found.
} 
^